test/expected/declare_nei.out
declare x as non-empty int
        ^
9: error: built-in type can not be "non-empty"
